--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
                     <div class="social-media">
                         <h4>DEVELOPERS</h4> <a class="Creadores" >
                             <p>Gregory J. Cavanerio</p></a>
-                        <a class="Creadores" ><p>Naymar Cavanerio</p></a>
+                        <a class="Creadores" >
+                            <p>Naymar Cavanerio</p></a>
                         <ul class="social-icons">
                         </ul>
                     </div>
